--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,27 +13,32 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 5.0.x
+      - name: Login to Heroku Container registry
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        run: docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
 
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-
-      - name: Test
-        run: dotnet test --no-build --verbosity normal
-
-      - name: Publish
-        run: dotnet publish --configuration Release --no-build --output ./video-editing-api/build
+      - name: Build and push Docker image
+        env:
+          HEROKU_APP_NAME: "video-editing"
+        run: |
+          docker build -t registry.heroku.com/$HEROKU_APP_NAME/web .
+          docker push registry.heroku.com/$HEROKU_APP_NAME/web
 
       - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "video-editing"
-          heroku_email: "20110517@student.hcmute.edu.vn"
-          appdir: "./video-editing-api" # The path to your app
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_APP_NAME: "video-editing"
+        run: |
+          curl -n -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation \
+            -d '{
+              "updates": [
+                {
+                  "type": "web",
+                  "docker_image": "registry.heroku.com/$HEROKU_APP_NAME/web"
+                }
+              ]
+            }' \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $HEROKU_API_KEY" \
+            -H "Accept: application/vnd.heroku+json; version=3.docker-releases"
