--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy to Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: "video-editing"
+          HEROKU_APP_NAME: "video-editing-core"
         run: |
           curl -n -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation \
             -d '{
